[project]
name = "shuiyuan-exporter"
version = "0.1.0"
description = "Export and analyze SJTU Shuiyuan Forum topics with a cache-first workflow."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4==4.12.3",
  "dumb_menu==1.0.8",
  "playwright>=1.58.0",
  "requests==2.32.3",
  "simple_term_menu==1.6.4",
]

[dependency-groups]
dev = [
  "pre-commit>=4.2.0",
  "pytest>=8.3.5",
  "ruff>=0.13.2",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
